# python-qgmap

./: .gitignore  CHANGES.md  README.md  README.rst  README.txt  TODO.md  distreadme.sh  main.js  pyproject.toml  qgmap-example.py  qgmap.html  qgmap.js  qgmap.py  setup.py
.github/actions/notify-team/: action.yml
.github/workflows/: main.yml  python-publish.yml
qgmap/: __init__.py  example.py  geocoder.py  presets.py  qgmap.html  qgmap.js  qgmap_test.py  qt.py  tracer.py
